crates/rspack_error/tests/fixtures/should_not_warn_when_commjs_not_export/fixtures__should_not_warn_when_commjs_not_export.snap
---
source: crates/rspack_error/tests/fixtures.rs
expression: should_not_warn_when_commjs_not_export
---
error[javascript]: JavaScript parsing error
  ┌─ tests/fixtures/should_not_warn_when_commjs_not_export/index.js:2:8
  │
2 │ const  D {
  │        ^ 'const' declarations must be initialized

error[javascript]: JavaScript parsing error
  ┌─ tests/fixtures/should_not_warn_when_commjs_not_export/index.js:2:10
  │
2 │ const  D {
  │          ^ Expected a semicolon

error[javascript]: JavaScript parsing error
  ┌─ tests/fixtures/should_not_warn_when_commjs_not_export/index.js:6:1
  │
6 │ }
  │ ^ Expression expected


